[gd_scene load_steps=10 format=3 uid="uid://cg1lvxt4gkxmn"]

[ext_resource type="Script" path="res://World_Objects/Editor_Objects/World_object_edtor_container.gd" id="1_ca4a6"]
[ext_resource type="Theme" uid="uid://55r57hveyxd8" path="res://Assets/Themes/editor_theme.tres" id="2_i1kgp"]
[ext_resource type="Script" path="res://World_Objects/Editor_Objects/forest_menu.gd" id="2_nhvwy"]
[ext_resource type="Script" path="res://World_Objects/Editor_Objects/crystal_menu.gd" id="3_hq3wa"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tq6po"]
radius = 15.368

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bir7a"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0.443137, 0.941176, 0.552941)

[sub_resource type="SphereMesh" id="SphereMesh_18w20"]
material = SubResource("StandardMaterial3D_bir7a")
radius = 5.0
height = 10.0
radial_segments = 9
rings = 9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_00lcu"]
transparency = 1
shading_mode = 0
albedo_color = Color(0, 0.443137, 0.941176, 0.552941)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nej4x"]
material = SubResource("StandardMaterial3D_00lcu")
radius = 1.0
height = 7.21
radial_segments = 4
rings = 1

[node name="World_object_edtor_container" type="Node3D" groups=["editor_object"]]
script = ExtResource("1_ca4a6")

[node name="controller_Handle" type="StaticBody3D" parent="."]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="controller_Handle"]
shape = SubResource("SphereShape3D_tq6po")

[node name="editor_mesh" type="MeshInstance3D" parent="controller_Handle"]
layers = 32
sorting_offset = 1e+07
mesh = SubResource("SphereMesh_18w20")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="controller_Handle/editor_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.7553, 0)
layers = 32
mesh = SubResource("CapsuleMesh_nej4x")
skeleton = NodePath("../../..")

[node name="MeshInstance3D7" type="MeshInstance3D" parent="controller_Handle/editor_mesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12.755, 0)
layers = 32
mesh = SubResource("CapsuleMesh_nej4x")
skeleton = NodePath("../../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="controller_Handle/editor_mesh"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, -12.755)
layers = 32
mesh = SubResource("CapsuleMesh_nej4x")
skeleton = NodePath("../../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="controller_Handle/editor_mesh"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 12.755)
layers = 32
mesh = SubResource("CapsuleMesh_nej4x")
skeleton = NodePath("../../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="controller_Handle/editor_mesh"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 12.755, 0, 0)
layers = 32
mesh = SubResource("CapsuleMesh_nej4x")
skeleton = NodePath("../../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="controller_Handle/editor_mesh"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -12.755, 0, 0)
layers = 32
mesh = SubResource("CapsuleMesh_nej4x")
skeleton = NodePath("../../..")

[node name="forest_menu" type="Panel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.737
anchor_right = 1.0
anchor_bottom = 0.399
grow_horizontal = 0
theme = ExtResource("2_i1kgp")
script = ExtResource("2_nhvwy")

[node name="VBoxContainer" type="VBoxContainer" parent="forest_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="node_type" type="HBoxContainer" parent="forest_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Panel2" type="Panel" parent="forest_menu/VBoxContainer/node_type"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuButton" type="MenuButton" parent="forest_menu/VBoxContainer/node_type"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 51
text = "Forest"
item_count = 2
popup/item_0/text = "Forest"
popup/item_0/id = 1
popup/item_1/text = "Crystal Deposit"
popup/item_1/id = 3

[node name="Panel" type="Panel" parent="forest_menu/VBoxContainer/node_type"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="s1" type="HSeparator" parent="forest_menu/VBoxContainer"]
layout_mode = 2

[node name="seed_edit" type="HBoxContainer" parent="forest_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="seed_label" type="RichTextLabel" parent="forest_menu/VBoxContainer/seed_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Seed:[/right]"

[node name="seed_input" type="Panel" parent="forest_menu/VBoxContainer/seed_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TextEdit" type="TextEdit" parent="forest_menu/VBoxContainer/seed_edit/seed_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 30
text = "0"
placeholder_text = "0"
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_multiple = false

[node name="Button" type="Button" parent="forest_menu/VBoxContainer/seed_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 34
text = "Enter"

[node name="s2" type="HSeparator" parent="forest_menu/VBoxContainer"]
layout_mode = 2

[node name="tree_count_edit" type="HBoxContainer" parent="forest_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="density_label" type="RichTextLabel" parent="forest_menu/VBoxContainer/tree_count_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Tree Amount:[/right]"

[node name="density_input" type="Panel" parent="forest_menu/VBoxContainer/tree_count_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="forest_menu/VBoxContainer/tree_count_edit/density_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
min_value = 15.0
max_value = 1000.0
value = 550.0
rounded = true

[node name="s5" type="HSeparator" parent="forest_menu/VBoxContainer"]
layout_mode = 2

[node name="forest_size_edit" type="HBoxContainer" parent="forest_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="label" type="RichTextLabel" parent="forest_menu/VBoxContainer/forest_size_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Forest Size:[/right]"

[node name="density_input" type="Panel" parent="forest_menu/VBoxContainer/forest_size_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="forest_menu/VBoxContainer/forest_size_edit/density_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
min_value = 15.0
max_value = 250.0
value = 50.0
rounded = true

[node name="s3" type="HSeparator" parent="forest_menu/VBoxContainer"]
layout_mode = 2

[node name="tree_slope" type="HBoxContainer" parent="forest_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="slope_label" type="RichTextLabel" parent="forest_menu/VBoxContainer/tree_slope"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Max Slope:[/right]"

[node name="slope_slider" type="Panel" parent="forest_menu/VBoxContainer/tree_slope"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="forest_menu/VBoxContainer/tree_slope/slope_slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
step = 0.005
value = 7.675

[node name="s4" type="HSeparator" parent="forest_menu/VBoxContainer"]
layout_mode = 2

[node name="tree_type" type="HBoxContainer" parent="forest_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="tree_type_label" type="RichTextLabel" parent="forest_menu/VBoxContainer/tree_type"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Tree Type:[/right]"

[node name="OptionButton" type="OptionButton" parent="forest_menu/VBoxContainer/tree_type"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 41
item_count = 3
selected = 0
popup/item_0/text = "Pine"
popup/item_0/id = 0
popup/item_1/text = "Oak"
popup/item_1/id = 1
popup/item_2/text = "Birch"
popup/item_2/id = 2

[node name="stone_menu" type="Panel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.737
anchor_right = 1.0
anchor_bottom = 0.355
grow_horizontal = 0
theme = ExtResource("2_i1kgp")
script = ExtResource("2_nhvwy")

[node name="VBoxContainer" type="VBoxContainer" parent="stone_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="node_type" type="HBoxContainer" parent="stone_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Panel2" type="Panel" parent="stone_menu/VBoxContainer/node_type"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuButton" type="MenuButton" parent="stone_menu/VBoxContainer/node_type"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 51
text = "Stone Deposit"
item_count = 3
popup/item_0/text = "Forest"
popup/item_0/id = 1
popup/item_1/text = "Stone Deposit"
popup/item_1/id = 2
popup/item_2/text = "Crystal Deposit"
popup/item_2/id = 2

[node name="Panel" type="Panel" parent="stone_menu/VBoxContainer/node_type"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="s1" type="HSeparator" parent="stone_menu/VBoxContainer"]
layout_mode = 2

[node name="seed_edit" type="HBoxContainer" parent="stone_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="seed_label" type="RichTextLabel" parent="stone_menu/VBoxContainer/seed_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Seed:[/right]"

[node name="seed_input" type="Panel" parent="stone_menu/VBoxContainer/seed_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TextEdit" type="TextEdit" parent="stone_menu/VBoxContainer/seed_edit/seed_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 30
text = "0"
placeholder_text = "0"
context_menu_enabled = false
middle_mouse_paste_enabled = false
caret_multiple = false

[node name="Button" type="Button" parent="stone_menu/VBoxContainer/seed_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_font_sizes/font_size = 34
text = "Enter"

[node name="s2" type="HSeparator" parent="stone_menu/VBoxContainer"]
layout_mode = 2

[node name="tree_count_edit" type="HBoxContainer" parent="stone_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="density_label" type="RichTextLabel" parent="stone_menu/VBoxContainer/tree_count_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Density:[/right]"

[node name="density_input" type="Panel" parent="stone_menu/VBoxContainer/tree_count_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="stone_menu/VBoxContainer/tree_count_edit/density_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
min_value = 50.0
max_value = 1000.0
value = 250.0
rounded = true

[node name="s3" type="HSeparator" parent="stone_menu/VBoxContainer"]
layout_mode = 2

[node name="tree_slope" type="HBoxContainer" parent="stone_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="slope_label" type="RichTextLabel" parent="stone_menu/VBoxContainer/tree_slope"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Max Slope:[/right]"

[node name="slope_slider" type="Panel" parent="stone_menu/VBoxContainer/tree_slope"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="stone_menu/VBoxContainer/tree_slope/slope_slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
max_value = 1.0
step = 0.005

[node name="s4" type="HSeparator" parent="stone_menu/VBoxContainer"]
layout_mode = 2

[node name="tree_type" type="HBoxContainer" parent="stone_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="tree_type_label" type="RichTextLabel" parent="stone_menu/VBoxContainer/tree_type"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Tree Type:[/right]"

[node name="OptionButton" type="OptionButton" parent="stone_menu/VBoxContainer/tree_type"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 41
item_count = 2
selected = 0
popup/item_0/text = "Pine"
popup/item_0/id = 0
popup/item_1/text = "Oak i guess"
popup/item_1/id = 1

[node name="crystal_menu" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.682
anchor_right = 1.0
anchor_bottom = 0.209
grow_horizontal = 0
theme = ExtResource("2_i1kgp")
script = ExtResource("3_hq3wa")

[node name="VBoxContainer" type="VBoxContainer" parent="crystal_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="node_type" type="HBoxContainer" parent="crystal_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Panel2" type="Panel" parent="crystal_menu/VBoxContainer/node_type"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuButton" type="MenuButton" parent="crystal_menu/VBoxContainer/node_type"]
layout_mode = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 51
text = "Crystal Deposit"
item_count = 2
popup/item_0/text = "Forest"
popup/item_0/id = 1
popup/item_1/text = "Crystal Deposit"
popup/item_1/id = 3

[node name="Panel" type="Panel" parent="crystal_menu/VBoxContainer/node_type"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="s2" type="HSeparator" parent="crystal_menu/VBoxContainer"]
layout_mode = 2

[node name="crystal_count_edit" type="HBoxContainer" parent="crystal_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="density_label" type="RichTextLabel" parent="crystal_menu/VBoxContainer/crystal_count_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Crystal Amount:[/right]"

[node name="density_input" type="Panel" parent="crystal_menu/VBoxContainer/crystal_count_edit"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="crystal_menu/VBoxContainer/crystal_count_edit/density_input"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
min_value = 25.0
max_value = 1500.0
value = 500.0
rounded = true

[node name="s3" type="HSeparator" parent="crystal_menu/VBoxContainer"]
layout_mode = 2

[node name="radius_slider" type="HBoxContainer" parent="crystal_menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="label" type="RichTextLabel" parent="crystal_menu/VBoxContainer/radius_slider"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 37
bbcode_enabled = true
text = "[right]Deposit Radius:[/right]"

[node name="slider" type="Panel" parent="crystal_menu/VBoxContainer/radius_slider"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="crystal_menu/VBoxContainer/radius_slider/slider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
min_value = 10.0
max_value = 200.0
value = 50.0

[connection signal="input_event" from="controller_Handle" to="." method="_on_controller_handle_input_event"]
[connection signal="text_changed" from="forest_menu/VBoxContainer/seed_edit/seed_input/TextEdit" to="forest_menu" method="seed_text_changed"]
[connection signal="pressed" from="forest_menu/VBoxContainer/seed_edit/Button" to="forest_menu" method="seed_changed"]
[connection signal="drag_ended" from="forest_menu/VBoxContainer/tree_count_edit/density_input/HSlider" to="forest_menu" method="density_changed"]
[connection signal="drag_ended" from="forest_menu/VBoxContainer/forest_size_edit/density_input/HSlider" to="forest_menu" method="size_changed"]
[connection signal="value_changed" from="forest_menu/VBoxContainer/tree_slope/slope_slider/HSlider" to="forest_menu" method="slope_changed"]
[connection signal="item_selected" from="forest_menu/VBoxContainer/tree_type/OptionButton" to="forest_menu" method="_tree_typed_chaned"]
[connection signal="text_changed" from="stone_menu/VBoxContainer/seed_edit/seed_input/TextEdit" to="stone_menu" method="seed_text_changed"]
[connection signal="pressed" from="stone_menu/VBoxContainer/seed_edit/Button" to="stone_menu" method="seed_changed"]
[connection signal="drag_ended" from="stone_menu/VBoxContainer/tree_count_edit/density_input/HSlider" to="stone_menu" method="density_changed"]
[connection signal="value_changed" from="stone_menu/VBoxContainer/tree_slope/slope_slider/HSlider" to="stone_menu" method="slope_changed"]
[connection signal="drag_ended" from="crystal_menu/VBoxContainer/crystal_count_edit/density_input/HSlider" to="crystal_menu" method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="crystal_menu/VBoxContainer/radius_slider/slider/HSlider" to="crystal_menu" method="radius_changed_drag_ended"]
